# DRGraph

./: .gitignore  CMakeLists.txt  DRGraphModule.cpp  Readme.md  data.cpp  data.h  evaluation.cpp  evaluation.h  genrandom.cpp  graph.cpp  graph.h  main.cpp  main2.cpp  multilevel.cpp  multilevel.h  requirements.txt  setup.py  visualizemod.cpp  visualizemod.h
python/: graphLayout.py  layout.py
web/backend/backend/: settings.py  urls.py
web/backend/src/: urls.py  views.py
web/backend/src/view/: index.html
web/backend/src/view/static/css/: app.927f8cb2eb1b9f078f97d935b5a8125c.css  app.927f8cb2eb1b9f078f97d935b5a8125c.css.map
web/backend/src/view/static/js/: app.738be0b25dbd32a843d3.js  app.738be0b25dbd32a843d3.js.map  manifest.2ae2e69a05c33dfc65f8.js.map  vendor.b7bf6c512c4257d32ed2.js  vendor.b7bf6c512c4257d32ed2.js.map
